Completed Compound half of selection tree

--- a/WildBasinPlantDichotomy/Base.lproj/Main.storyboard
+++ b/WildBasinPlantDichotomy/Base.lproj/Main.storyboard
@@ -571,7 +571,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9A1-lN-yV3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5836" y="-1710"/>
+            <point key="canvasLocation" x="5582" y="-1710"/>
         </scene>
         <!--Vine Plant View Controller-->
         <scene sceneID="9mk-0d-jar">
@@ -623,7 +623,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0gz-bG-inq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5836" y="-3313"/>
+            <point key="canvasLocation" x="5582" y="-3313"/>
         </scene>
         <!--Vine Plant Detail View Controller-->
         <scene sceneID="ND2-hS-Req">
@@ -671,7 +671,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gQ6-Cy-ByU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="6746" y="-3313"/>
+            <point key="canvasLocation" x="6417" y="-3313"/>
         </scene>
         <!--AlternateVNV View Controller-->
         <scene sceneID="SAe-h6-kyV">
@@ -813,7 +813,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="u2U-Sd-a2f" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5836" y="-2455"/>
+            <point key="canvasLocation" x="5582" y="-2455"/>
         </scene>
         <!--ToothedSM2L2 View Controller-->
         <scene sceneID="iNx-oG-ON5">
@@ -866,7 +866,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xMU-um-8nG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="6889" y="-2455"/>
+            <point key="canvasLocation" x="6417" y="-2455"/>
         </scene>
         <!--Web View Controller-->
         <scene sceneID="Vw0-Rp-cac">
@@ -916,10 +916,10 @@
             </objects>
             <point key="canvasLocation" x="1652" y="250.52473763118442"/>
         </scene>
-        <!--View Controller-->
+        <!--Compound View Controller-->
         <scene sceneID="P4X-pW-xkF">
             <objects>
-                <viewController storyboardIdentifier="compound" id="Dy1-xa-dx7" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="compound" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Dy1-xa-dx7" customClass="CompoundViewController" customModule="WildBasinPlantDichotomy" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="1B0-Km-N9C"/>
                         <viewControllerLayoutGuide type="bottom" id="4k6-FQ-F4O"/>
@@ -962,6 +962,7 @@
                                 <state key="normal" title="Next"/>
                                 <connections>
                                     <action selector="btnNext:" destination="0V8-U7-62K" eventType="touchUpInside" id="b17-vG-e3a"/>
+                                    <action selector="btnNext:" destination="Dy1-xa-dx7" eventType="touchUpInside" id="gNY-T8-3bG"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="V3z-KO-41X">
@@ -988,17 +989,20 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <connections>
+                        <outlet property="btn1" destination="tjY-Xq-cG3" id="pT8-Ah-QkP"/>
+                        <outlet property="btn2" destination="Cpe-bz-ZYE" id="Z3r-wX-CVh"/>
+                        <outlet property="btn3" destination="xk4-kU-BZR" id="4k5-CZ-5Yo"/>
                         <segue destination="XbJ-4T-7uT" kind="show" identifier="pinnateSegue" id="hu1-Me-rDo"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZTv-hb-x35" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3429.5999999999999" y="-95.802098950524751"/>
+            <point key="canvasLocation" x="3430" y="-97"/>
         </scene>
-        <!--View Controller-->
+        <!--Pinnate View Controller-->
         <scene sceneID="q1H-xN-eP3">
             <objects>
-                <viewController storyboardIdentifier="pinnate" id="XbJ-4T-7uT" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="pinnate" useStoryboardIdentifierAsRestorationIdentifier="YES" id="XbJ-4T-7uT" customClass="PinnateViewController" customModule="WildBasinPlantDichotomy" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="hVq-6v-WmS"/>
                         <viewControllerLayoutGuide type="bottom" id="7Zl-KT-o1j"/>
@@ -1023,6 +1027,7 @@
                                 <state key="normal" title="Next"/>
                                 <connections>
                                     <action selector="btnNext:" destination="0V8-U7-62K" eventType="touchUpInside" id="HYV-uH-5eo"/>
+                                    <action selector="btnNext:" destination="XbJ-4T-7uT" eventType="touchUpInside" id="z5x-zP-Y9G"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5FQ-LW-caE">
@@ -1067,17 +1072,20 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <connections>
+                        <outlet property="btn1" destination="lTg-y6-W1I" id="wq3-e7-6mV"/>
+                        <outlet property="btn2" destination="ZyE-qI-7Np" id="kdE-fT-J7x"/>
+                        <outlet property="btn3" destination="42l-6E-2Li" id="seQ-vh-oGf"/>
                         <segue destination="tmX-Cr-Fzr" kind="show" identifier="greaterThan10LeafletsSegue" id="AqB-v8-EKP"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Q69-ER-gfV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4544.8000000000002" y="-96.7016491754123"/>
+            <point key="canvasLocation" x="4401" y="-97"/>
         </scene>
-        <!--View Controller-->
+        <!--Greater Than10 View Controller-->
         <scene sceneID="vS4-4h-vbo">
             <objects>
-                <viewController storyboardIdentifier="greaterThan10" id="tmX-Cr-Fzr" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="greaterThan10" useStoryboardIdentifierAsRestorationIdentifier="YES" id="tmX-Cr-Fzr" customClass="GreaterThan10ViewController" customModule="WildBasinPlantDichotomy" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Jac-de-jHt"/>
                         <viewControllerLayoutGuide type="bottom" id="k1o-hy-t61"/>
@@ -1102,6 +1110,7 @@
                                 <state key="normal" title="Next"/>
                                 <connections>
                                     <action selector="btnNext:" destination="0V8-U7-62K" eventType="touchUpInside" id="6lN-Jy-Clh"/>
+                                    <action selector="btnNext:" destination="tmX-Cr-Fzr" eventType="touchUpInside" id="8Fu-Fh-KDj"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MPh-If-S51">
@@ -1136,6 +1145,10 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <connections>
+                        <outlet property="btn1" destination="SdR-LJ-3CB" id="NjZ-gK-luM"/>
+                        <outlet property="btn2" destination="nfj-pl-OsL" id="gvi-HV-heD"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9k1-O7-suj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
